@@ -15,7 +15,20 @@ module GNOME {
 		typedef sequence<URI> URIList;
 
 		interface Document : Bonobo::Unknown {
+			exception DocumentReadOnly {};
+		
 			oneway void setLinePosition (in long line);
+
+			void insert (in long offset, in string str,
+					    in long length)
+				raises (DocumentReadOnly);
+
+			void delete (in long offset, in long length)
+				raises (DocumentReadOnly);
+
+			string getChars (in long offset, in long length);
+
+			long getCharCount ();
 		};
 
 		interface Window : Bonobo::Unknown {
