@@ -1,3 +1,10 @@
+2002-08-24  James Willcox  <jwillcox@gnome.org>
+
+	* GNOME_Gedit.idl:  Added "insert", "delete" "getCharCount", and
+	"getChars" methods.  Also added the DocumentReadOnly exception.
+
+	* gedit-document-server.c:  Implemented said methods.
+
 2002-08-24  Paolo Maggi  <maggi@athena.polito.it>
 
 	* gedit-file.c (gedit_file_revert_dialog): new function
